# dnd-agent

./: .gitignore  LICENSE  README.md
DndAgent/: .gitignore  INSTRUCTION.md  README.md  TROUBLESHOOTING.md  docker-compose.yml  evaluation.ipynb  pyproject.toml  start.sh
DndAgent/backend/: .env.example  Dockerfile  requirements.txt
DndAgent/backend/app/: config.py  main.py
DndAgent/backend/app/agents/: agents.py  narrative_agent.py  orchestrator.py  rules_lawyer_agent.py  state.py  tools.py  world_builder_agent.py
DndAgent/backend/app/api/: routes_debug.py  routes_play.py
DndAgent/backend/app/memory/: episodic_store.py  graph_schema.py  router.py  semantic_tkg.py
DndAgent/backend/app/models/: schemas.py
DndAgent/backend/app/rules/: README.md  download_data.py  ingestPipeline.py  lawyer.py  process_kb.py  prompts.py  requirements.txt  ruleGenerationPipeline.py
DndAgent/backend/app/scripts/: check_api.py  seed.py
DndAgent/backend/app/services/: embeddings.py  generation.py  session_manager.py
DndAgent/backend/app/storytelling/: __init__.py  agents.py  main.py  orchestrator.py  tools.py
DndAgent/backend/scripts/: generate_score.py  log_jsonl_to_excel.py
DndAgent/frontend/: Dockerfile  package-lock.json
DndAgent/frontend/app/: page.tsx
DndAgent/frontend/app/play/: page.tsx
DndAgent/frontend/components/: CharacterSheet.tsx  CombatBoard.tsx  CombatLog.tsx  DiceMenu.tsx  InventoryPanel.tsx  PartyPanel.tsx  StatsPanel.tsx
DndAgent/frontend/lib/: api.ts
DndAgent/scripts/: test_combat_flow.py
DndAgent/tests/: test_backend.py
dnd-dm/: .env.example  (+8 more)
(+23 files in other folders)
